--- a/manifests/m/M336/GDPSUpdater/1.0.0/M336.GDPSUpdater.locale.en-US.yaml
+++ b/manifests/m/M336/GDPSUpdater/1.0.0/M336.GDPSUpdater.locale.en-US.yaml
@@ -17,6 +17,6 @@ Tags:
 ReleaseNotesUrl: https://github.com/M336G/GDPS-Updater/releases/tag/v1.0.0
 Documentations:
 - DocumentLabel: Wiki
-  DocumentUrl: https://github.com/M336G/GDPS-Updater/wiki
+  DocumentUrl: https://github.com/M336G/GDPS-Updater/tree/v1.0.0?tab=readme-ov-file#usage
 ManifestType: defaultLocale
 ManifestVersion: 1.9.0
