New version: Dangbei.XiaowangScreenshot version 1.2.2

--- a/manifests/d/Dangbei/XiaowangScreenshot/1.2.2/Dangbei.XiaowangScreenshot.locale.en-US.yaml
+++ b/manifests/d/Dangbei/XiaowangScreenshot/1.2.2/Dangbei.XiaowangScreenshot.locale.en-US.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.locale.1.10.0.schema.json
 
 PackageIdentifier: Dangbei.XiaowangScreenshot
-PackageVersion: 1.2.1
+PackageVersion: 1.2.2
 PackageLocale: en-US
 Author: Nanjing Haomiyue Technology Ltd.
 License: Freeware
@@ -15,10 +15,9 @@ Tags:
 - picture
 - screenshot
 ReleaseNotes: |-
-  1. windows 录屏支持录音。
-  2. mac 支持长截图，支持自动滚动长截图
-  3. windows 优化长截图性能
-  4. 优化了初始占用内存过高的问题
-  5. 修复了若干 bug
+  1. 图库支持打开本地文件夹及自定义图库路径。
+  2. mac 增加权限授权引导图。
+  3. mac 录屏增加录制音频。
+  4. 修复了一些 bug
 ManifestType: locale
 ManifestVersion: 1.10.0
