--- a/manifests/k/KnifMelti/WAU-Settings-GUI/1.7.9.5/KnifMelti.WAU-Settings-GUI.locale.en-US.yaml
+++ b/manifests/k/KnifMelti/WAU-Settings-GUI/1.7.9.5/KnifMelti.WAU-Settings-GUI.locale.en-US.yaml
@@ -15,7 +15,7 @@ LicenseUrl: https://github.com/KnifMelti/WAU-Settings-GUI/blob/main/LICENSE
 Copyright: Copyright (c) 2025 KnifMelti
 ShortDescription: Provides a user-friendly portable standalone interface to modify every aspect of Winget-AutoUpdate (WAU) settings
 Description: >
-  Significantly enhance WAU's usability for home users while maintaining enterprise-grade functionality.
+  Significantly enhance WAU's usability for home admin users while maintaining enterprise-grade functionality.
   Benefits from not having to manage the settings in several places when testing etc. (great for developers)...
   ...a perfect companion for those supporting the community (if the community actually uses it!) - being able to ask for a
   screenshot of the settings because it comes with all included (even a screenshot function masking potentially sensitive data)!
