Corrected Installation Notes/PackageDependencies: KnifMelti.WAU-Settings-GUI version 1.7.9.5

--- a/manifests/k/KnifMelti/WAU-Settings-GUI/1.7.9.5/KnifMelti.WAU-Settings-GUI.locale.en-US.yaml
+++ b/manifests/k/KnifMelti/WAU-Settings-GUI/1.7.9.5/KnifMelti.WAU-Settings-GUI.locale.en-US.yaml
@@ -25,6 +25,11 @@ Tags:
 - winget-autoupdate
 - gui
 ReleaseNotesUrl: https://github.com/KnifMelti/WAU-Settings-GUI/releases/tag/v1.7.9.5
-InstallationNotes: Admin required
+InstallationNotes: |
+  Admin required to run (exe and shortcuts have the flag set). 
+  This installer will download Winget-AutoUpdate from https://github.com/Romanitho/Winget-AutoUpdate during installation (if chosen).
+  If you want to use WAU-Settings-GUI without an internet connection, you can download the latest version of Winget-AutoUpdate manually and install it before using WAU-Settings-GUI.
+  Internet connection required during installation process (if downloading WAU).
 ManifestType: defaultLocale
 ManifestVersion: 1.10.0
+
