--- a/manifests/b/Beeper/Beeper/4.1.1/Beeper.Beeper.locale.en-US.yaml
+++ b/manifests/b/Beeper/Beeper/4.1.1/Beeper.Beeper.locale.en-US.yaml
@@ -13,7 +13,7 @@ PackageName: Beeper
 PackageUrl: https://www.beeper.com/download
 License: Proprietary
 LicenseUrl: https://www.beeper.com/terms
-Copyright: © 2024 Beeper Inc.
+Copyright: © 2025 Beeper Inc.
 ShortDescription: All your chats in one app. Yes, really.
 Description: A single app to chat on iMessage, WhatsApp, and 13 other chat networks. You can search, snooze, or archive messages. And with a unified inbox, you’ll never miss a message again.
 Moniker: beeper
@@ -34,6 +34,19 @@ Tags:
 - telegram
 - twitter
 - whatsapp
+ReleaseNotes: |-
+  ✨ New
+  - New themes available in Settings > Appearance
+  - Mentions of your name are specially highlighted in chat messages
+
+  🛠️ Fixed & Improved
+  - Pinned chats should not become un-pinned on relaunch any more
+  - Linux: Fixed ability to record audio and voice notes
+  - Fixed unread counts for Discord DMs and servers
+  - Telegram appears as an option to start a chat with a phone number
+  - Facebook login is more reliable
+  - Improved reliability of "Delay notifications for..." setting
+  - Settings should not revert any more when you change them too quickly
 ReleaseNotesUrl: https://beeper.notion.site
 Documentations:
 - DocumentLabel: FAQ
