Update: 360.PalmInput version 3.2.5.1010

--- a/manifests/3/360/PalmInput/3.2.5.1010/360.PalmInput.locale.zh-CN.yaml
+++ b/manifests/3/360/PalmInput/3.2.5.1010/360.PalmInput.locale.zh-CN.yaml
@@ -1,4 +1,4 @@
-# Automatically updated by the winget bot at 2025/Jul/14
+# Created with YamlCreate.ps1 Dumplings Mod
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.locale.1.10.0.schema.json
 
 PackageIdentifier: 360.PalmInput
@@ -21,7 +21,9 @@ Tags:
 - 汉语
 - 输入法
 ReleaseNotes: |-
-  1. 修复在部分应用程序中，默认设置英文状态却输出中文的问题
-  2. 此版本为支持 xp 系统的最终版本，后续如需在 xp 系统使用，可下载本版本
+  1. 新增剪贴板功能（windows>win7）
+  2. 按【ctrl+shift+v】可快速调起剪贴板（可配制快捷键）
+  3. 优化跨端剪贴板获取逻辑
+  4. 支持 windows11 on ARM
 ManifestType: locale
 ManifestVersion: 1.10.0
