--- a/manifests/3/360/PalmInput/3.2.5.1010/360.PalmInput.installer.yaml
+++ b/manifests/3/360/PalmInput/3.2.5.1010/360.PalmInput.installer.yaml
@@ -1,4 +1,4 @@
-# Automatically updated by the winget bot at 2025/Jul/14
+# Created with YamlCreate.ps1 Dumplings Mod
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.10.0.schema.json
 
 PackageIdentifier: 360.PalmInput
@@ -16,7 +16,7 @@ UpgradeBehavior: install
 FileExtensions:
 - piskn
 ProductCode: PalmInput
-ReleaseDate: 2025-06-05
+ReleaseDate: 2025-07-14
 Installers:
 - Architecture: x86
   InstallerUrl: https://dl.360safe.com/installer/web/PalmInputSetup.exe
