--- a/manifests/3/360/PalmInput/3.2.5.1010/360.PalmInput.locale.zh-CN.yaml
+++ b/manifests/3/360/PalmInput/3.2.5.1010/360.PalmInput.locale.zh-CN.yaml
@@ -5,14 +5,14 @@ PackageIdentifier: 360.PalmInput
 PackageVersion: 3.2.5.1010
 PackageLocale: zh-CN
 Publisher: 360.cn
-PublisherUrl: https://www.360.cn/
+# PublisherUrl: https://www.360.cn/
 Author: 北京奇元科技有限公司
 PackageName: 手心输入法
 PackageUrl: https://www.xinshuru.com/
 License: 免费软件
 LicenseUrl: https://www.xinshuru.com/license.html
 Copyright: (C) 360.cn Inc. All Rights Reserved.
-CopyrightUrl: https://www.360.cn/about/banquanshengming.html
+# CopyrightUrl: https://www.360.cn/about/banquanshengming.html
 ShortDescription: 智能、高效，无广告骚扰，只专注于输入本质的纯粹输入法
 Description: 手心输入法是一款智能、高效，无广告骚扰，只专注于输入本质的纯粹输入法。拥有强大的智能输入引擎、丰富的本地词库、在线词库及精美皮肤在线下载，以其丰富的输入方式，海量的在线资源，带给用户超凡的输入体验。
 Tags:
