--- a/manifests/3/360/PalmInput/3.2.5.1010/360.PalmInput.locale.zh-CN.yaml
+++ b/manifests/3/360/PalmInput/3.2.5.1010/360.PalmInput.locale.zh-CN.yaml
@@ -1,18 +1,18 @@
-# Automatically updated by the winget bot at 2025/Jul/14
+# Created with YamlCreate.ps1 Dumplings Mod
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.locale.1.10.0.schema.json
 
 PackageIdentifier: 360.PalmInput
 PackageVersion: 3.2.5.1010
 PackageLocale: zh-CN
 Publisher: 360.cn
-PublisherUrl: https://www.360.cn/
+# PublisherUrl: https://www.360.cn/
 Author: 北京奇元科技有限公司
 PackageName: 手心输入法
 PackageUrl: https://www.xinshuru.com/
 License: 免费软件
 LicenseUrl: https://www.xinshuru.com/license.html
 Copyright: (C) 360.cn Inc. All Rights Reserved.
-CopyrightUrl: https://www.360.cn/about/banquanshengming.html
+# CopyrightUrl: https://www.360.cn/about/banquanshengming.html
 ShortDescription: 智能、高效，无广告骚扰，只专注于输入本质的纯粹输入法
 Description: 手心输入法是一款智能、高效，无广告骚扰，只专注于输入本质的纯粹输入法。拥有强大的智能输入引擎、丰富的本地词库、在线词库及精美皮肤在线下载，以其丰富的输入方式，海量的在线资源，带给用户超凡的输入体验。
 Tags:
@@ -21,7 +21,9 @@ Tags:
 - 汉语
 - 输入法
 ReleaseNotes: |-
-  1. 修复在部分应用程序中，默认设置英文状态却输出中文的问题
-  2. 此版本为支持 xp 系统的最终版本，后续如需在 xp 系统使用，可下载本版本
+  1. 新增剪贴板功能（windows>win7）
+  2. 按【ctrl+shift+v】可快速调起剪贴板（可配制快捷键）
+  3. 优化跨端剪贴板获取逻辑
+  4. 支持 windows11 on ARM
 ManifestType: locale
 ManifestVersion: 1.10.0
