--- a/manifests/a/ActiveDirectoryPro/ADProToolkit/2.3.5/ActiveDirectoryPro.ADProToolkit.installer.yaml
+++ b/manifests/a/ActiveDirectoryPro/ADProToolkit/2.3.5/ActiveDirectoryPro.ADProToolkit.installer.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.10.0.schema.json
 
 PackageIdentifier: ActiveDirectoryPro.ADProToolkit
-PackageVersion: 2.3.4
+PackageVersion: 2.3.5
 InstallerType: exe
 Scope: machine
 InstallModes:
@@ -55,13 +55,14 @@ ExpectedReturnCodes:
   ReturnResponse: invalidParameter
 - InstallerReturnCode: -1
   ReturnResponse: cancelledByUser
-ProductCode: '{D6DEB2E9-CE87-4C4F-BC0B-EB1872E7F11F}'
+ProductCode: '{C59106D6-ABD1-4793-ABB8-27B0776D4C1F}'
+ReleaseDate: 2025-07-15
 AppsAndFeaturesEntries:
 - UpgradeCode: '{1A0C25E2-86F2-475B-B44E-7774AF3F3676}'
   InstallerType: msi
 Installers:
 - Architecture: x64
   InstallerUrl: https://activedirectorypro.com/downloads/ADProToolkit.exe
-  InstallerSha256: F41D778B2B8F35B7AF91A5848F92AC4DFA308331B8954DC758EFBDE7CB7B8B84
+  InstallerSha256: EC30B9FE88C8CBEBCA92CDA91B16C3685819A6971757103A3B0CB0FBCD07E611
 ManifestType: installer
 ManifestVersion: 1.10.0
