--- a/manifests/a/ActiveDirectoryPro/ADProToolkit/2.3.5/ActiveDirectoryPro.ADProToolkit.locale.en-US.yaml
+++ b/manifests/a/ActiveDirectoryPro/ADProToolkit/2.3.5/ActiveDirectoryPro.ADProToolkit.locale.en-US.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.10.0.schema.json
 
 PackageIdentifier: ActiveDirectoryPro.ADProToolkit
-PackageVersion: 2.3.4
+PackageVersion: 2.3.5
 PackageLocale: en-US
 Publisher: ActiveDirectoryPro
 PublisherUrl: https://activedirectorypro.com/
@@ -19,6 +19,15 @@ Description: Active Directory Pro Toolkit is an easy to use Active Directory Too
 Tags:
 - active-directory
 - ad
+ReleaseNotes: |-
+  - Updated User templates to include the following:
+    - Description field
+    - Account options
+      - User must change password at next logon
+      - User cannot change password
+      - Password never expires
+      - Account is disabled
+      - Account expiration setting
 ReleaseNotesUrl: https://activedirectorypro.com/release-notes/
 PurchaseUrl: https://activedirectorypro.com/pricing/
 Documentations:
