--- a/manifests/b/BlenderFoundation/Blender/4.5.0/BlenderFoundation.Blender.locale.en-US.yaml
+++ b/manifests/b/BlenderFoundation/Blender/4.5.0/BlenderFoundation.Blender.locale.en-US.yaml
@@ -5,16 +5,16 @@ PackageIdentifier: BlenderFoundation.Blender
 PackageVersion: 4.5.0
 PackageLocale: en-US
 Publisher: Blender Foundation
-PublisherUrl: https://www.blender.org/
-PublisherSupportUrl: https://www.blender.org/support/
-PrivacyUrl: https://www.blender.org/privacy-policy/
+# PublisherUrl: https://www.blender.org/
+# PublisherSupportUrl: https://www.blender.org/support/
+# PrivacyUrl: https://www.blender.org/privacy-policy/
 Author: Blender Foundation
 PackageName: blender
-PackageUrl: https://www.blender.org/
+# PackageUrl: https://www.blender.org/
 License: GPL-3.0-or-later
-LicenseUrl: https://www.blender.org/about/license/
+# LicenseUrl: https://www.blender.org/about/license/
 Copyright: 2024, Blender Foundation
-CopyrightUrl: https://www.blender.org/about/logo/
+# CopyrightUrl: https://www.blender.org/about/logo/
 ShortDescription: Free and Open 3D Creation Software
 Description: |-
   Welcome to Blender! Blender is a free and open-source 3D creation suite.
@@ -28,7 +28,7 @@ Tags:
 - modeling
 - render
 - vfx
-ReleaseNotesUrl: https://www.blender.org/download/releases/4-5/
+# ReleaseNotesUrl: https://www.blender.org/download/releases/4-5/
 Documentations:
 - DocumentLabel: Manual
   DocumentUrl: https://docs.blender.org/manual/en/latest/
