--- a/manifests/b/BlenderFoundation/Blender/4.5.0/BlenderFoundation.Blender.locale.zh-CN.yaml
+++ b/manifests/b/BlenderFoundation/Blender/4.5.0/BlenderFoundation.Blender.locale.zh-CN.yaml
@@ -5,16 +5,16 @@ PackageIdentifier: BlenderFoundation.Blender
 PackageVersion: 4.5.0
 PackageLocale: zh-CN
 Publisher: Blender Foundation
-PublisherUrl: https://www.blender.org/
-PublisherSupportUrl: https://www.blender.org/support/
-PrivacyUrl: https://www.blender.org/privacy-policy/
+# PublisherUrl: https://www.blender.org/
+# PublisherSupportUrl: https://www.blender.org/support/
+# PrivacyUrl: https://www.blender.org/privacy-policy/
 Author: Blender Foundation
 PackageName: blender
-PackageUrl: https://www.blender.org/
+# PackageUrl: https://www.blender.org/
 License: GPL-3.0-or-later
-LicenseUrl: https://www.blender.org/about/license/
+# LicenseUrl: https://www.blender.org/about/license/
 Copyright: 2024, Blender Foundation
-CopyrightUrl: https://www.blender.org/about/logo/
+# CopyrightUrl: https://www.blender.org/about/logo/
 ShortDescription: 免费开源的 3D 创作软件
 Description: |-
   Blender 是一款免费开源的 3D 创作套件。
@@ -28,7 +28,7 @@ Tags:
 - 渲染
 - 特效
 - 视觉特效
-ReleaseNotesUrl: https://www.blender.org/download/releases/4-5/
+# ReleaseNotesUrl: https://www.blender.org/download/releases/4-5/
 Documentations:
 - DocumentLabel: 手册
   DocumentUrl: https://docs.blender.org/manual/zh-hans/latest/
