--- a/manifests/n/NitroRCr/AIasWorkspace/1.7.6/NitroRCr.AIasWorkspace.locale.en-US.yaml
+++ b/manifests/n/NitroRCr/AIasWorkspace/1.7.6/NitroRCr.AIasWorkspace.locale.en-US.yaml
@@ -5,7 +5,7 @@ PackageIdentifier: NitroRCr.AIasWorkspace
 PackageVersion: 1.7.6
 PackageLocale: en-US
 Publisher: aiaw
-PublisherUrl: https://blog.krytro.com/
+PublisherUrl: https://github.com/NitroRCr
 PublisherSupportUrl: https://github.com/NitroRCr/AIaW/issues
 PackageName: AI as Workspace
 PackageUrl: https://docs.aiaw.app/
