--- a/manifests/t/TRUSTSING/iDefender/5.0.2.0/TRUSTSING.iDefender.locale.en-US.yaml
+++ b/manifests/t/TRUSTSING/iDefender/5.0.2.0/TRUSTSING.iDefender.locale.en-US.yaml
@@ -8,7 +8,7 @@ Publisher: iMonitorSDK
 PublisherUrl: https://trustsing.com/
 Author: Shenzhen Chuangxin Changrong Network Co., Ltd.
 PackageName: iDefender
-PackageUrl: https://idefender.trustsing.com/
+# PackageUrl: https://idefender.trustsing.com/
 License: Proprietary
 Copyright: Copyright ©️ Shenzhen Chuangxin Changrong Network Co., Ltd.
 ShortDescription: Endpoint Detection Defense and Response for Home
