Comment out inaccessible URLs

--- a/manifests/t/TRUSTSING/iDefender/5.0.2.0/TRUSTSING.iDefender.locale.zh-CN.yaml
+++ b/manifests/t/TRUSTSING/iDefender/5.0.2.0/TRUSTSING.iDefender.locale.zh-CN.yaml
@@ -8,7 +8,7 @@ Publisher: iMonitorSDK
 PublisherUrl: https://trustsing.com/
 Author: 深圳市创信长荣网络有限公司
 PackageName: 冰盾主动防御系统
-PackageUrl: https://trustsing.com/idefender/
+# PackageUrl: https://trustsing.com/idefender/
 License: 专有软件
 Copyright: 版权所有 ©️ 深圳市创信长荣网络有限公司
 ShortDescription: 主动防御系统
