--- a/manifests/s/Seewo/AirTeach/2.0.17.17062/Seewo.AirTeach.installer.yaml
+++ b/manifests/s/Seewo/AirTeach/2.0.17.17062/Seewo.AirTeach.installer.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.10.0.schema.json
 
 PackageIdentifier: Seewo.AirTeach
-PackageVersion: AirteachSetup_2.0.17.17062
+PackageVersion: 2.0.17.17062
 InstallerType: nullsoft
 Scope: machine
 UpgradeBehavior: install
