--- a/manifests/s/Seewo/AirTeach/2.0.17.17064/Seewo.AirTeach.locale.zh-CN.yaml
+++ b/manifests/s/Seewo/AirTeach/2.0.17.17064/Seewo.AirTeach.locale.zh-CN.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.locale.1.10.0.schema.json
 
 PackageIdentifier: Seewo.AirTeach
-PackageVersion: AirteachSetup_2.0.17.17064
+PackageVersion: 2.0.17.17064
 PackageLocale: zh-CN
 Publisher: Seewo
 PublisherUrl: https://www.seewo.com/
