Fix: DOSBoxStaging.DOSBoxStaging version 0.82.0

--- a/manifests/d/DOSBoxStaging/DOSBoxStaging/0.82.0/DOSBoxStaging.DOSBoxStaging.locale.en-US.yaml
+++ b/manifests/d/DOSBoxStaging/DOSBoxStaging/0.82.0/DOSBoxStaging.DOSBoxStaging.locale.en-US.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.6.0.schema.json
 
 PackageIdentifier: DOSBoxStaging.DOSBoxStaging
-PackageVersion: 0.82.0-9df43
+PackageVersion: 0.82.0
 PackageLocale: en-US
 Publisher: DOSBox Staging
 PublisherUrl: https://www.dosbox-staging.org/
