--- a/manifests/d/DOSBoxStaging/DOSBoxStaging/0.82.0/DOSBoxStaging.DOSBoxStaging.yaml
+++ b/manifests/d/DOSBoxStaging/DOSBoxStaging/0.82.0/DOSBoxStaging.DOSBoxStaging.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.version.1.6.0.schema.json
 
 PackageIdentifier: DOSBoxStaging.DOSBoxStaging
-PackageVersion: 0.82.0-9df43
+PackageVersion: 0.82.0
 DefaultLocale: en-US
 ManifestType: version
 ManifestVersion: 1.6.0
