--- a/manifests/l/lightspark/lightspark/0.8.4.1/lightspark.lightspark.installer.yaml
+++ b/manifests/l/lightspark/lightspark/0.8.4.1/lightspark.lightspark.installer.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.9.0.schema.json
 
 PackageIdentifier: lightspark.lightspark
-PackageVersion: 0.8.4-git
+PackageVersion: 0.8.4.1
 MinimumOSVersion: 10.0.0.0
 InstallerType: nullsoft
 FileExtensions:
