--- a/manifests/l/lightspark/lightspark/0.8.6.1/lightspark.lightspark.locale.en-US.yaml
+++ b/manifests/l/lightspark/lightspark/0.8.6.1/lightspark.lightspark.locale.en-US.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.9.0.schema.json
 
 PackageIdentifier: lightspark.lightspark
-PackageVersion: 0.8.6-git
+PackageVersion: 0.8.6.1
 PackageLocale: en-US
 Publisher: The Lightspark Developers
 # PublisherUrl:
