--- a/manifests/g/Gajim/Gajim/1.3.3/Gajim.Gajim.yaml
+++ b/manifests/g/Gajim/Gajim/1.3.3/Gajim.Gajim.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.version.1.9.0.schema.json
 
 PackageIdentifier: Gajim.Gajim
-PackageVersion: 1.3.3+b5b2ad4aee92
+PackageVersion: 1.3.3
 DefaultLocale: en-US
 ManifestType: version
 ManifestVersion: 1.9.0
