Apply suggestions from code review

--- a/manifests/r/RedisInsight/RedisInsight/2.70.1/RedisInsight.RedisInsight.locale.en-US.yaml
+++ b/manifests/r/RedisInsight/RedisInsight/2.70.1/RedisInsight.RedisInsight.locale.en-US.yaml
@@ -11,9 +11,9 @@ PrivacyUrl: https://redis.io/legal/privacy-policy/
 PackageName: Redis Insight
 PackageUrl: https://redis.io/insight/
 License: Proprietary
-LicenseUrl: https://redis.io/legal/redis-insight-license-terms/
+LicenseUrl: https://www.redis.io/legal/redis-insight-license-terms/
 Copyright: Copyright © 2024 Redis Ltd.
-CopyrightUrl: https://redis.io/legal/trademark-guidelines/
+CopyrightUrl: https://redis-doc-test.readthedocs.io/en/latest/topics/trademark/
 ShortDescription: Visualize and optimize Redis data, connect to RDI, and more.
 Description: >
   Redis Insight is a powerful tool for visualizing and optimizing data in Redis, making real-time application development easier and more fun than ever before. Redis Insight lets you do both GUI- and CLI-based interactions in a fully-featured desktop GUI client.
