--- a/manifests/c/CozyCloud/CozyDrive/4.0.0/CozyCloud.CozyDrive.locale.en-US.yaml
+++ b/manifests/c/CozyCloud/CozyDrive/4.0.0/CozyCloud.CozyDrive.locale.en-US.yaml
@@ -6,8 +6,8 @@ PackageVersion: 4.0.0
 PackageLocale: en-US
 Publisher: Cozy Cloud
 PublisherUrl: https://cozy.io/en
-PublisherSupportUrl: https://cozy.io/en/support
-PrivacyUrl: https://cozy.io/en/privacy
+# PublisherSupportUrl: https://cozy.io/en/support
+# PrivacyUrl: https://cozy.io/en/privacy
 Author: Cozy Cloud
 PackageName: Cozy Drive
 PackageUrl: https://cozy.io/en/download/#desktop
