Add more protocols and extensions

--- a/manifests/s/SteamMemory/Fellou/2.4.0/SteamMemory.Fellou.installer.yaml
+++ b/manifests/s/SteamMemory/Fellou/2.4.0/SteamMemory.Fellou.installer.yaml
@@ -9,7 +9,12 @@ InstallerSwitches:
   Upgrade: --updated
 UpgradeBehavior: install
 Protocols:
+- http
+- https
 - fellouurl
+FileExtensions:
+- htm
+- html
 ReleaseDate: 2025-07-04
 Installers:
 - Architecture: x64
