ShortDescription and Description

--- a/manifests/n/NFON/Cloudya/2.0.0/NFON.Cloudya.locale.en-US.yaml
+++ b/manifests/n/NFON/Cloudya/2.0.0/NFON.Cloudya.locale.en-US.yaml
@@ -15,8 +15,8 @@ License: Proprietary
 # LicenseUrl:
 Copyright: © 2025 - NFON | All rights reserved.
 # CopyrightUrl:
-ShortDescription: Cloudya Windows Desktop Apps
-# Description:
+ShortDescription: Cloudya Desktop App
+Description: Cloudya is NFON's smart business communication platform that helps make your workflow smart. It has several functions, including cloud telephony.
 # Moniker:
 Tags:
 - sip
