--- a/manifests/n/NFON/Cloudya/2.0.0/NFON.Cloudya.locale.zh-CN.yaml
+++ b/manifests/n/NFON/Cloudya/2.0.0/NFON.Cloudya.locale.zh-CN.yaml
@@ -15,8 +15,8 @@ License: 专有软件
 # LicenseUrl:
 # Copyright:
 # CopyrightUrl:
-ShortDescription: Cloudya Windows 桌面应用程序
-# Description:
+ShortDescription: Cloudya 桌面应用程序
+Description: Cloudya 是 NFON 的智能商业通信平台，旨在帮助您优化工作流程。它具有多种功能，包括云电话服务。
 # Moniker:
 Tags:
 - sip
