--- a/manifests/n/NFON/Cloudya/2.0.0/NFON.Cloudya.locale.en-US.yaml
+++ b/manifests/n/NFON/Cloudya/2.0.0/NFON.Cloudya.locale.en-US.yaml
@@ -9,7 +9,7 @@ PublisherUrl: https://www.nfon.com/
 # PublisherSupportUrl:
 PrivacyUrl: https://www.nfon.com/en/legal/data-protection/
 Author: NFON AG
-PackageName: Cloudya
+PackageName: Cloudya (without CRM)
 PackageUrl: https://www.nfon.com/en/service/downloads/
 License: Proprietary
 # LicenseUrl:
