Add Protocols and FileExtensions

--- a/manifests/g/GitExtensionsTeam/GitExtensions/5.2.1.18061/GitExtensionsTeam.GitExtensions.installer.yaml
+++ b/manifests/g/GitExtensionsTeam/GitExtensions/5.2.1.18061/GitExtensionsTeam.GitExtensions.installer.yaml
@@ -8,6 +8,12 @@ Scope: machine
 InstallerSwitches:
   InstallLocation: INSTALLDIR="<INSTALLPATH>"
 UpgradeBehavior: install
+Protocols:
+- git
+- github-mac
+- github-windows
+FileExtensions:
+- gitext
 Dependencies:
   PackageDependencies:
   - PackageIdentifier: Microsoft.DotNet.DesktopRuntime.8
