--- a/manifests/g/Gravitational/Teleport/18.0.1/Gravitational.Teleport.locale.en-US.yaml
+++ b/manifests/g/Gravitational/Teleport/18.0.1/Gravitational.Teleport.locale.en-US.yaml
@@ -61,7 +61,7 @@ ReleaseNotes: |-
   - Prevent the lack of an email_verified OIDC claim from failing authentication when the OIDC connecter is set to enforce verified email addresses.
   - Fixed a email integration enrollment documentation link.
   - Fixed a regression in SAML IdP that caused service provider initiated login to fail if the request was made with http-redirect binding encoding and the user had an active session in Teleport.
-# ReleaseNotesUrl:
+ReleaseNotesUrl: https://github.com/gravitational/teleport/releases/tag/v18.0.1
 PurchaseUrl: https://goteleport.com/pricing/
 # InstallationNotes:
 Documentations:
