--- a/manifests/g/Gravitational/Teleport/18.0.1/Gravitational.Teleport.installer.yaml
+++ b/manifests/g/Gravitational/Teleport/18.0.1/Gravitational.Teleport.installer.yaml
@@ -13,6 +13,7 @@ Commands:
 - tbot
 - tctl
 - tsh
+ReleaseDate: 2025-07-16
 Installers:
 - Architecture: x64
   InstallerUrl: https://cdn.teleport.dev/teleport-v18.0.1-windows-amd64-bin.zip
