New version: Tencent.WeChat version 3.9.12.54

--- a/manifests/t/Tencent/WeChat/3.9.12.54/Tencent.WeChat.locale.zh-Hans.yaml
+++ b/manifests/t/Tencent/WeChat/3.9.12.54/Tencent.WeChat.locale.zh-Hans.yaml
@@ -1,8 +1,8 @@
 # Created with YamlCreate.ps1 Dumplings Mod
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.locale.1.9.0.schema.json
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.locale.1.10.0.schema.json
 
 PackageIdentifier: Tencent.WeChat
-PackageVersion: 3.9.12.51
+PackageVersion: 3.9.12.54
 PackageLocale: zh-Hans
 Publisher: 腾讯科技(深圳)有限公司
 PublisherUrl: https://www.wechat.com/zh_CN/
@@ -32,6 +32,6 @@ Tags:
 - 语音
 - 通话
 ReleaseNotes: 修复了一些已知问题。
-ReleaseNotesUrl: https://weixin.qq.com/cgi-bin/readtemplate?lang=zh_CN&t=page/faq/win/3912/index&faq=win_3912
+ReleaseNotesUrl: https://weixin.qq.com/cgi-bin/readtemplate?lang=zh_CN&t=weixin_faq_list
 ManifestType: locale
-ManifestVersion: 1.9.0
+ManifestVersion: 1.10.0
