--- a/manifests/a/Agisoft/Metashape/Standard/2.2.1/Agisoft.Metashape.Standard.installer.yaml
+++ b/manifests/a/Agisoft/Metashape/Standard/2.2.1/Agisoft.Metashape.Standard.installer.yaml
@@ -1,8 +1,8 @@
 # Created with komac v2.6.0
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.6.0.schema.json
 
-PackageIdentifier: Agisoft.MetashapeStandard
-PackageVersion: 2.1.2
+PackageIdentifier: Agisoft.Metashape.Standard
+PackageVersion: 2.2.1
 InstallerLocale: en-US
 InstallerType: wix
 Scope: machine
@@ -15,7 +15,7 @@ FileExtensions:
 - psx
 - psz
 ProductCode: '{BF4F1F57-2EAE-4033-95D3-EBCE4CAA646F}'
-ReleaseDate: 2024-07-30
+ReleaseDate: 2025-04-29
 AppsAndFeaturesEntries:
 - DisplayName: Agisoft Metashape Standard
   Publisher: Agisoft
@@ -25,7 +25,7 @@ InstallationMetadata:
   DefaultInstallLocation: '%ProgramFiles%\Agisoft\Metashape'
 Installers:
 - Architecture: x64
-  InstallerUrl: https://download.agisoft.com/metashape_2_1_2_x64.msi
-  InstallerSha256: D0D577BA277BBFB719D30B9F90C80D8083F54AD07750045887BF37576A2671DD
+  InstallerUrl: https://download.agisoft.com/metashape_2_2_1_x64.msi
+  InstallerSha256: 4ED4DC6C73475F5E2FE33F23E933F8BADE75E2726D411B35D514907BD57C67B9
 ManifestType: installer
 ManifestVersion: 1.6.0
