--- a/manifests/a/Agisoft/Metashape/Standard/2.2.1/Agisoft.Metashape.Standard.locale.en-US.yaml
+++ b/manifests/a/Agisoft/Metashape/Standard/2.2.1/Agisoft.Metashape.Standard.locale.en-US.yaml
@@ -1,8 +1,8 @@
 # Created with komac v2.6.0
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.6.0.schema.json
 
-PackageIdentifier: Agisoft.MetashapeStandard
-PackageVersion: 2.1.2
+PackageIdentifier: Agisoft.Metashape.Standard
+PackageVersion: 2.2.1
 PackageLocale: en-US
 Publisher: Agisoft
 PublisherUrl: https://www.agisoft.com/
