Update version: Agisoft.Metashape.Professional version 2.2.1

--- a/manifests/a/Agisoft/Metashape/Professional/2.2.1/Agisoft.Metashape.Professional.installer.yaml
+++ b/manifests/a/Agisoft/Metashape/Professional/2.2.1/Agisoft.Metashape.Professional.installer.yaml
@@ -14,17 +14,17 @@ UpgradeBehavior: install
 FileExtensions:
 - psx
 - psz
-ProductCode: '{B7AAFAF3-5D58-40A4-9C33-4102CFCA8085}'
+ProductCode: '{FB111EBA-508D-452A-8A36-EB61EF27BD83}'
 ReleaseDate: 2025-05-26
 AppsAndFeaturesEntries:
-- DisplayName: Agisoft Metashape Standard
-  ProductCode: '{B7AAFAF3-5D58-40A4-9C33-4102CFCA8085}'
-  UpgradeCode: '{AE696986-17E8-42B2-AB84-0AD9B65A77B9}'
+- DisplayName: Agisoft Metashape Professional
+  ProductCode: '{FB111EBA-508D-452A-8A36-EB61EF27BD83}'
+  UpgradeCode: '{A4D9932D-3226-4E56-A1E4-F97C72D394BC}'
 InstallationMetadata:
-  DefaultInstallLocation: '%ProgramFiles%\Agisoft\Metashape'
+  DefaultInstallLocation: '%ProgramFiles%\Agisoft\Metashape Pro'
 Installers:
 - Architecture: x64
-  InstallerUrl: https://download.agisoft.com/metashape_2_2_1_x64.msi
-  InstallerSha256: 4ED4DC6C73475F5E2FE33F23E933F8BADE75E2726D411B35D514907BD57C67B9
+  InstallerUrl: https://download.agisoft.com/metashape-pro_2_2_1_x64.msi
+  InstallerSha256: 523FC300C348C447C6B0D9481FA4BA4FFC684ED2D7A285E681B14482054EA081
 ManifestType: installer
 ManifestVersion: 1.10.0
