--- a/manifests/e/Elgato/Studio/1.0.0.671/Elgato.Studio.installer.yaml
+++ b/manifests/e/Elgato/Studio/1.0.0.671/Elgato.Studio.installer.yaml
@@ -9,6 +9,9 @@ Platform:
 MinimumOSVersion: 10.0.19045.0
 InstallerType: msix
 PackageFamilyName: Elgato.Studio_g54w8ztgkx496
+Dependencies:
+  PackageDependencies:
+  - PackageIdentifier: Microsoft.WindowsAppRuntime.1.7
 Installers:
 - Architecture: x64
   InstallerUrl: https://edge.elgato.com/egc/windows/estw/1.0.0/Elgato.Studio_1.0.0.671_x64.msix
