--- a/manifests/o/OpenZFS/OpenZFSOnWindows-debug/2.3.1rc9/OpenZFS.OpenZFSOnWindows-debug.locale.en-US.yaml
+++ b/manifests/o/OpenZFS/OpenZFSOnWindows-debug/2.3.1rc9/OpenZFS.OpenZFSOnWindows-debug.locale.en-US.yaml
@@ -10,7 +10,7 @@ PublisherSupportUrl: https://github.com/openzfsonwindows/openzfs/issues
 PackageName: OpenZFS On Windows-debug
 PackageUrl: https://github.com/openzfsonwindows/openzfs
 License: CDDL
-ShortDescription: OpenZFS On Windows-debug Setup
+ShortDescription: OpenZFS is an advanced file system and volume manager which was originally developed for Solaris and is now maintained by the OpenZFS community.
 ReleaseNotesUrl: https://github.com/openzfsonwindows/openzfs/releases/tag/zfswin-2.3.1rc9
 Documentations:
 - DocumentLabel: Wiki
