Modify: Sefinek.GenshinStellaMod version 8.7.8.0 (Auto)

--- a/manifests/s/Sefinek/GenshinStellaMod/8.7.8.0/Sefinek.GenshinStellaMod.locale.en-US.yaml
+++ b/manifests/s/Sefinek/GenshinStellaMod/8.7.8.0/Sefinek.GenshinStellaMod.locale.en-US.yaml
@@ -1,4 +1,4 @@
-# Created with WinGet Releaser using komac v2.12.1
+# Modified with Sundry.
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.10.0.schema.json
 
 PackageIdentifier: Sefinek.GenshinStellaMod
@@ -19,22 +19,22 @@ ShortDescription: Safe Genshin Impact mod with beautiful shaders, FPS unlocker, 
 Description: Enhanced graphics, carefully crafted shaders, impressive FPS unlocking, and mods provide players with an even better gameplay experience than ever before. Rediscover the world of Teyvat with new visuals. A dedicated launcher streamlines the entire process, allowing players to jump into the action quickly and easily. Take your gameplay to the next level. Immerse yourself in the enhanced world of Teyvat and create unforgettable moments.
 Moniker: genshinstellamod
 Tags:
-- genshin
-- genshin-3dmigoto
-- genshin-fps
-- genshin-fps-unlock
-- genshin-fps-unlocker
-- genshin-impact
-- genshin-impact-3dmigoto
-- genshin-impact-mod
-- genshin-impact-unlock-fps
-- genshin-mod
-- genshin-reshade
-- genshin-stella-mod
-- genshinfps
-- genshinmod
-- stella-mod
-- stellamod
+  - genshin
+  - genshin-3dmigoto
+  - genshin-fps
+  - genshin-fps-unlock
+  - genshin-fps-unlocker
+  - genshin-impact
+  - genshin-impact-3dmigoto
+  - genshin-impact-mod
+  - genshin-impact-unlock-fps
+  - genshin-mod
+  - genshin-reshade
+  - genshin-stella-mod
+  - genshinfps
+  - genshinmod
+  - stella-mod
+  - stellamod
 ReleaseNotes: |-
   📥 Changelog for v8.7.8.0 from 16.07.2025
   1. Various issues with NLog have been resolved.
