--- a/manifests/s/Sefinek/GenshinStellaMod/8.7.8.0/Sefinek.GenshinStellaMod.installer.yaml
+++ b/manifests/s/Sefinek/GenshinStellaMod/8.7.8.0/Sefinek.GenshinStellaMod.installer.yaml
@@ -1,4 +1,4 @@
-# Created with WinGet Releaser using komac v2.12.1
+# Modified with Sundry.
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.10.0.schema.json
 
 PackageIdentifier: Sefinek.GenshinStellaMod
@@ -7,25 +7,25 @@ InstallerLocale: en-US
 InstallerType: inno
 Scope: machine
 InstallModes:
-- interactive
-- silent
-- silentWithProgress
+  - interactive
+  - silent
+  - silentWithProgress
 InstallerSwitches:
   Silent: /VERYSILENT /NORESTART
 Dependencies:
   PackageDependencies:
-  - PackageIdentifier: Microsoft.DotNet.DesktopRuntime.8
-  - PackageIdentifier: Microsoft.EdgeWebView2Runtime
-  - PackageIdentifier: Microsoft.VCRedist.2015+.x64
+    - PackageIdentifier: Microsoft.DotNet.DesktopRuntime.8
+    - PackageIdentifier: Microsoft.EdgeWebView2Runtime
+    - PackageIdentifier: Microsoft.VCRedist.2015+.x64
 ProductCode: 5D6E44F3-2141-4EA4-89E3-6C3018583FF7_is1
 ReleaseDate: 2025-07-15
 AppsAndFeaturesEntries:
-- ProductCode: 5D6E44F3-2141-4EA4-89E3-6C3018583FF7_is1
+  - ProductCode: 5D6E44F3-2141-4EA4-89E3-6C3018583FF7_is1
 InstallationMetadata:
   DefaultInstallLocation: '%ProgramFiles%\Sefinek\Genshin-Stella-Mod'
 Installers:
-- Architecture: x64
-  InstallerUrl: https://github.com/sefinek/Genshin-Impact-ReShade/releases/download/v8.7.8.0/Stella-Mod-Setup_8.7.8.0.exe
-  InstallerSha256: 61473561CD2D45CBA52EAC4888BC5886FE0F9C48A74B06F8AE41AD4F1C9374C5
+  - Architecture: x64
+    InstallerUrl: https://github.com/sefinek/Genshin-Impact-ReShade/releases/download/v8.7.8.0/Stella-Mod-Setup_8.7.8.0.exe
+    InstallerSha256: 61473561CD2D45CBA52EAC4888BC5886FE0F9C48A74B06F8AE41AD4F1C9374C5
 ManifestType: installer
 ManifestVersion: 1.10.0
