--- a/manifests/o/OpenZFS/OpenZFSOnWindows-debug/2.3.1rc9/OpenZFS.OpenZFSOnWindows-debug.locale.en-US.yaml
+++ b/manifests/o/OpenZFS/OpenZFSOnWindows-debug/2.3.1rc9/OpenZFS.OpenZFSOnWindows-debug.locale.en-US.yaml
@@ -7,7 +7,7 @@ PackageLocale: en-US
 Publisher: OpenZFS
 PublisherUrl: https://github.com/openzfsonwindows
 PublisherSupportUrl: https://github.com/openzfsonwindows/openzfs/issues
-PackageName: OpenZFS On Windows-debug
+PackageName: OpenZFS On Windows
 PackageUrl: https://github.com/openzfsonwindows/openzfs
 License: CDDL
 ShortDescription: OpenZFS is an advanced file system and volume manager which was originally developed for Solaris and is now maintained by the OpenZFS community.
