--- a/manifests/o/OpenZFS/OpenZFSOnWindows-debug/2.3.1rc9/OpenZFS.OpenZFSOnWindows-debug.yaml
+++ b/manifests/o/OpenZFS/OpenZFSOnWindows-debug/2.3.1rc9/OpenZFS.OpenZFSOnWindows-debug.yaml
@@ -1,7 +1,7 @@
 # Created using wingetcreate 1.9.14.0
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.version.1.9.0.schema.json
 
-PackageIdentifier: OpenZFS.OpenZFSOnWindows-debug
+PackageIdentifier: OpenZFS.OpenZFS
 PackageVersion: 2.3.1rc9
 DefaultLocale: en-US
 ManifestType: version
