Fix typo in the path

--- a/manifests/l/LLVM/clangd/20.1.8/LLVM.clangd.installer.yaml
+++ b/manifests/l/LLVM/clangd/20.1.8/LLVM.clangd.installer.yaml
@@ -6,7 +6,7 @@ PackageVersion: 20.1.8
 InstallerType: zip
 NestedInstallerType: portable
 NestedInstallerFiles:
-- RelativeFilePath: clang_20.1.8/bin/clangd.exe
+- RelativeFilePath: clangd_20.1.8/bin/clangd.exe
 ReleaseDate: 2025-07-11
 Installers:
 - Architecture: x64
