--- a/manifests/l/LLVM/clangd/20.1.8/LLVM.clangd.installer.yaml
+++ b/manifests/l/LLVM/clangd/20.1.8/LLVM.clangd.installer.yaml
@@ -7,6 +7,7 @@ InstallerType: zip
 NestedInstallerType: portable
 NestedInstallerFiles:
 - RelativeFilePath: clangd_20.1.8/bin/clangd.exe
+  PortableCommandAlias: clangd
 ReleaseDate: 2025-07-11
 Installers:
 - Architecture: x64
