--- a/manifests/m/Microsoft/Edge/138.0.3351.95/Microsoft.Edge.locale.nb-NO.yaml
+++ b/manifests/m/Microsoft/Edge/138.0.3351.95/Microsoft.Edge.locale.nb-NO.yaml
@@ -5,7 +5,7 @@ PackageIdentifier: Microsoft.Edge
 PackageVersion: 138.0.3351.95
 PackageLocale: nb-NO
 Publisher: Microsoft Corporation
-PublisherUrl: https://www.microsoft.com/nb-NO
+# PublisherUrl: https://www.microsoft.com/nb-NO
 PublisherSupportUrl: https://support.microsoft.com/nb-NO/microsoft-edge
 PrivacyUrl: https://privacy.microsoft.com/en-us/privacystatement
 Author: Microsoft Corporation
