--- a/manifests/w/WHONET/WHONET/25.7.16/WHONET.WHONET.locale.en-US.yaml
+++ b/manifests/w/WHONET/WHONET/25.7.16/WHONET.WHONET.locale.en-US.yaml
@@ -31,5 +31,10 @@ Tags:
 - Microbiology
 - Resistance
 - WHO
+ReleaseNotes: |-
+  Adds Primate as an animal species.
+  Adds the ability to map to wild-type and non-wild-type antibiotic results in BacLink.
+  Implements a feature to allow MIC modifiers present in columns other than the numeric result to be incorporated with the results in BacLink.
+ReleaseNotesUrl: https://whonet.org/WHONET-ReleaseNotes.html
 ManifestType: defaultLocale
 ManifestVersion: 1.9.0
