--- a/manifests/c/CodeLyokoGames/IFSCL/Standalone/4.7/CodeLyokoGames.IFSCL.Standalone.locale.en-US.yaml
+++ b/manifests/c/CodeLyokoGames/IFSCL/Standalone/4.7/CodeLyokoGames.IFSCL.Standalone.locale.en-US.yaml
@@ -6,7 +6,7 @@ PackageVersion: '4.7'
 PackageLocale: en-US
 Publisher: CodeLyokoGames
 PublisherUrl: https://en.codelyoko.fr/ifscl
-PublisherSupportUrl: http://bit.ly/changelogIFSCL
+PublisherSupportUrl: https://bit.ly/changelogIFSCL
 Author: Immudelki
 PackageName: IFSCL
 License: Freeware
