correct installer switches and avalable install modes

--- a/manifests/c/CodeLyokoGames/IFSCL/Standalone/4.7/CodeLyokoGames.IFSCL.Standalone.installer.yaml
+++ b/manifests/c/CodeLyokoGames/IFSCL/Standalone/4.7/CodeLyokoGames.IFSCL.Standalone.installer.yaml
@@ -9,7 +9,6 @@ Scope: machine
 InstallModes:
 - interactive
 - silent
-- silentWithProgress
 UpgradeBehavior: install
 ProductCode: '{45204DCE-AA1F-4DA4-A55E-A98E06813877}_is1'
 ReleaseDate: 2025-02-13
@@ -23,5 +22,7 @@ Installers:
 - Architecture: x64
   InstallerUrl: https://ifscl.b-cdn.net/standalone/IFSCL_47X_Setup.exe
   InstallerSha256: D06DB3F4E84393390DBC5ED48BB412C4C5050895ED0CF3D06FE0B03C86EEF90B
+  InstallerSwitches:
+    Silent: /silent
 ManifestType: installer
 ManifestVersion: 1.10.0
