correct upgrade behavior

--- a/manifests/c/CodeLyokoGames/IFSCL/Standalone/4.7/CodeLyokoGames.IFSCL.Standalone.installer.yaml
+++ b/manifests/c/CodeLyokoGames/IFSCL/Standalone/4.7/CodeLyokoGames.IFSCL.Standalone.installer.yaml
@@ -9,7 +9,7 @@ Scope: machine
 InstallModes:
 - interactive
 - silent
-UpgradeBehavior: install
+UpgradeBehavior: uninstallPrevious
 ProductCode: '{45204DCE-AA1F-4DA4-A55E-A98E06813877}_is1'
 ReleaseDate: 2025-02-13
 AppsAndFeaturesEntries:
