--- a/manifests/c/CodeLyokoGames/IFSCL/Standalone/4.7/CodeLyokoGames.IFSCL.Standalone.locale.en-US.yaml
+++ b/manifests/c/CodeLyokoGames/IFSCL/Standalone/4.7/CodeLyokoGames.IFSCL.Standalone.locale.en-US.yaml
@@ -10,7 +10,7 @@ PublisherSupportUrl: https://bit.ly/changelogIFSCL
 Author: Immudelki
 PackageName: IFSCL
 License: Freeware
-ShortDescription: IFSCL Standalone Release
+ShortDescription: IFSCL Latest Standalone Release
 Moniker: ifscl
 ManifestType: defaultLocale
 ManifestVersion: 1.10.0
