--- a/manifests/l/LLVM/clangd/20.1.8/LLVM.clangd.installer.yaml
+++ b/manifests/l/LLVM/clangd/20.1.8/LLVM.clangd.installer.yaml
@@ -8,6 +8,9 @@ NestedInstallerType: portable
 NestedInstallerFiles:
 - RelativeFilePath: clangd_20.1.8/bin/clangd.exe
   PortableCommandAlias: clangd
+InstallModes:
+- silentWithProgress
+UpgradeBehavior: uninstallPrevious
 ReleaseDate: 2025-07-11
 Installers:
 - Architecture: x64
