--- a/manifests/f/Fotofabriek/Fotofabriek/4.10.0/Fotofabriek.Fotofabriek.yaml
+++ b/manifests/f/Fotofabriek/Fotofabriek/4.10.0/Fotofabriek.Fotofabriek.yaml
@@ -3,6 +3,6 @@
 
 PackageIdentifier: Fotofabriek.Fotofabriek
 PackageVersion: 4.10.0
-DefaultLocale: en-US
+DefaultLocale: nl-NL
 ManifestType: version
 ManifestVersion: 1.10.0
