--- a/manifests/f/Fotofabriek/Fotofabriek/4.10.0/Fotofabriek.Fotofabriek.locale.en-US.yaml
+++ b/manifests/f/Fotofabriek/Fotofabriek/4.10.0/Fotofabriek.Fotofabriek.locale.en-US.yaml
@@ -1,20 +1,20 @@
 # Created with YamlCreate.ps1 v2.5.0 $debug=NVS1.CRLF.7-5-2.Win32NT
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.10.0.schema.json
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.locale.1.10.0.schema.json
 
 PackageIdentifier: Fotofabriek.Fotofabriek
 PackageVersion: 4.10.0
 PackageLocale: en-US
-Publisher: 1STEIN Corp.
-PublisherUrl: https://www.fotofabriek.nl/
-PublisherSupportUrl: https://www.fotofabriek.nl/klantenservice/
-PrivacyUrl: https://www.fotofabriek.nl/privacy/
-Author: Fotofabriek.nl B.V.
-PackageName: fotofabriekSoftware
-PackageUrl: https://www.fotofabriek.nl/software-download/
+# Publisher:
+# PublisherUrl:
+# PublisherSupportUrl:
+# PrivacyUrl:
+# Author:
+# PackageName:
+# PackageUrl:
 License: Freeware
-LicenseUrl: https://www.fotofabriek.nl/algemene-voorwaarden/
-Copyright: Copyright © 2020 fotofabriek
-CopyrightUrl: https://www.fotofabriek.nl/algemene-voorwaarden/
+# LicenseUrl:
+# Copyright:
+# CopyrightUrl:
 ShortDescription: The free professional design software for easily creating a photo product.
 # Description:
 # Moniker:
@@ -24,5 +24,5 @@ ShortDescription: The free professional design software for easily creating a ph
 # PurchaseUrl:
 # InstallationNotes:
 # Documentations:
-ManifestType: defaultLocale
+ManifestType: locale
 ManifestVersion: 1.10.0
