Fix: Greenshot.Greenshot version 1.3.290

--- a/manifests/g/Greenshot/Greenshot/1.3.290/Greenshot.Greenshot.installer.yaml
+++ b/manifests/g/Greenshot/Greenshot/1.3.290/Greenshot.Greenshot.installer.yaml
@@ -4,7 +4,7 @@
 PackageIdentifier: Greenshot.Greenshot
 PackageVersion: 1.3.290
 InstallerType: inno
-Scope: machine
+Scope: user
 UpgradeBehavior: install
 FileExtensions:
 - greenshot
