--- a/manifests/s/Silhouette/SilhouetteStudio/5.0.219/Silhouette.SilhouetteStudio.installer.yaml
+++ b/manifests/s/Silhouette/SilhouetteStudio/5.0.219/Silhouette.SilhouetteStudio.installer.yaml
@@ -59,6 +59,7 @@ FileExtensions:
 - studio
 - studio3
 ProductCode: '{4FF953D7-BC82-49FA-A487-388A1396A22C}'
+ReleaseDate: 2025-05-20
 AppsAndFeaturesEntries:
 - UpgradeCode: '{ECAC4A7C-E1E7-4318-AE89-D7CDD2087F64}'
   InstallerType: msi
