Trying an unusual way to fix the exit code.
I got this idea for the silliness of it.

--- a/manifests/e/Elgato/Studio/1.0.0.671/Elgato.Studio.installer.yaml
+++ b/manifests/e/Elgato/Studio/1.0.0.671/Elgato.Studio.installer.yaml
@@ -17,9 +17,17 @@ Installers:
   InstallerUrl: https://edge.elgato.com/egc/windows/estw/1.0.0/Elgato.Studio_1.0.0.671_x64.msix
   InstallerSha256: 4B08DB783D54A640F40F2283819BE86CAFF456FD811864654CA6AE892B011FE7
   SignatureSha256: 0166C60BD8574A17098472BE769CF0737D301E086960BA5570A3C05B0F6934A4
+  UnsupportedOSArchitectures:
+  - arm64
+  - arm
+  - x86
 - Architecture: arm64
   InstallerUrl: https://edge.elgato.com/egc/windows/estw/1.0.0/Elgato.Studio_1.0.0.671_arm64.msix
   InstallerSha256: 9C5BB56B6E630AAD59C8C26FA8D2F6F04A8CBA243654641E816CC5B6464AD1D3
   SignatureSha256: 18CC02BCFB89C5D0191216173A73A37345403A19B583964B4CBD370AF36971D9
+  UnsupportedOSArchitectures:
+  - x64
+  - arm
+  - x86
 ManifestType: installer
 ManifestVersion: 1.10.0
