New version: TGRMNSoftware.BulkRenameUtility version 4.0.0.9

--- a/manifests/t/TGRMNSoftware/BulkRenameUtility/4.0.0.9/TGRMNSoftware.BulkRenameUtility.locale.en-US.yaml
+++ b/manifests/t/TGRMNSoftware/BulkRenameUtility/4.0.0.9/TGRMNSoftware.BulkRenameUtility.locale.en-US.yaml
@@ -1,8 +1,8 @@
-# Created with YamlCreate.ps1 v2.4.6 $debug=AUSU.CRLF.7-5-2.Win32NT
+# Created with YamlCreate.ps1 Dumplings Mod
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.10.0.schema.json
 
 PackageIdentifier: TGRMNSoftware.BulkRenameUtility
-PackageVersion: 4.0.0.8
+PackageVersion: 4.0.0.9
 PackageLocale: en-US
 Publisher: TGRMN Software
 PublisherUrl: https://www.bulkrenameutility.co.uk/
@@ -24,10 +24,8 @@ Tags:
 - file
 - rename
 - utility
-# ReleaseNotes:
 ReleaseNotesUrl: https://www.s3.tgrmn.com/bru4/BRUChangelog.pdf
 PurchaseUrl: https://www.bulkrenameutility.co.uk/Buy.php
-# InstallationNotes:
 Documentations:
 - DocumentLabel: FAQ
   DocumentUrl: https://www.bulkrenameutility.co.uk/Faq.php
