--- a/manifests/t/TGRMNSoftware/BulkRenameUtility/4.0.0.9/TGRMNSoftware.BulkRenameUtility.installer.yaml
+++ b/manifests/t/TGRMNSoftware/BulkRenameUtility/4.0.0.9/TGRMNSoftware.BulkRenameUtility.installer.yaml
@@ -1,24 +1,23 @@
-# Created with YamlCreate.ps1 v2.4.6 $debug=AUSU.CRLF.7-5-2.Win32NT
+# Created with YamlCreate.ps1 Dumplings Mod
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.10.0.schema.json
 
 PackageIdentifier: TGRMNSoftware.BulkRenameUtility
-PackageVersion: 4.0.0.8
+PackageVersion: 4.0.0.9
 InstallerType: inno
 Scope: machine
+UpgradeBehavior: install
 FileExtensions:
 - bru
-UpgradeBehavior: install
 ProductCode: Bulk Rename Utility Installation_is1
-ReleaseDate: 2025-05-28
 ElevationRequirement: elevatesSelf
 InstallationMetadata:
   DefaultInstallLocation: '%ProgramFiles%\Bulk Rename Utility'
 Installers:
 - Architecture: x86
-  InstallerUrl: https://www.s3.tgrmn.com/bru4/BRU_setup_4.0.0.8.exe
-  InstallerSha256: EAF5E7E01A2A5622DE151D0FF8D84B8FB1BF5ECBDB525F7BA05816823F2E12C5
+  InstallerUrl: https://www.s3.tgrmn.com/bru4/BRU_setup_4.0.0.9.exe
+  InstallerSha256: 9CA2ABD23BB19966F42020461B6BD6BF9A2F8A5E076601E38758AA768BD6F2FB
 - Architecture: x64
-  InstallerUrl: https://www.s3.tgrmn.com/bru4/BRU_setup_4.0.0.8.exe
-  InstallerSha256: EAF5E7E01A2A5622DE151D0FF8D84B8FB1BF5ECBDB525F7BA05816823F2E12C5
+  InstallerUrl: https://www.s3.tgrmn.com/bru4/BRU_setup_4.0.0.9.exe
+  InstallerSha256: 9CA2ABD23BB19966F42020461B6BD6BF9A2F8A5E076601E38758AA768BD6F2FB
 ManifestType: installer
 ManifestVersion: 1.10.0
