--- a/manifests/g/Genesys/GenesysCloudBackgroundAssistant/1.5.346.0/Genesys.GenesysCloudBackgroundAssistant.locale.en-US.yaml
+++ b/manifests/g/Genesys/GenesysCloudBackgroundAssistant/1.5.346.0/Genesys.GenesysCloudBackgroundAssistant.locale.en-US.yaml
@@ -20,6 +20,9 @@ Description: |-
   The Genesys Cloud Background Assistant is available for Windows only.
   - Run as a background process – Invisible to users, Genesys Cloud Background Assistant is a helper program that makes screen recording possible when using Genesys Cloud in a web browser. In Windows, it operates as a Windows service in the background.
   - Genesys Cloud Background Assistant starts automatically – Genesys Cloud Background Assistant automatically runs when your computer starts, so that the application can capture screen recording whenever you use Genesys Cloud in a web browser.
+ReleaseNotes: |-
+  - Updated to Chromium 137
+  - Improved handling of cache folder
 ReleaseNotesUrl: https://help.mypurecloud.com/articles/genesys-cloud-background-assistant-gcba-release-notes/
 ManifestType: defaultLocale
 ManifestVersion: 1.10.0
