--- a/manifests/u/Uniconta/Uniconta/94.0.0008/Uniconta.Uniconta.installer.yaml
+++ b/manifests/u/Uniconta/Uniconta/94.0.0008/Uniconta.Uniconta.installer.yaml
@@ -5,7 +5,7 @@ PackageIdentifier: Uniconta.Uniconta
 PackageVersion: 94.0.0008
 InstallerLocale: en-US
 InstallerType: msi
-Scope: user
+Scope: machine
 InstallModes:
 - interactive
 - silent
