--- a/manifests/u/Uniconta/Uniconta/94.0.0008/Uniconta.Uniconta.installer.yaml
+++ b/manifests/u/Uniconta/Uniconta/94.0.0008/Uniconta.Uniconta.installer.yaml
@@ -5,7 +5,6 @@ PackageIdentifier: Uniconta.Uniconta
 PackageVersion: 94.0.0008
 InstallerLocale: en-US
 InstallerType: msi
-Scope: machine
 InstallModes:
 - interactive
 - silent
@@ -17,6 +16,11 @@ AppsAndFeaturesEntries:
   UpgradeCode: '{3FF221FA-60F6-43AB-BE1A-BB64B38C4E64}'
 Installers:
 - Architecture: x64
+  Scope: machine
+  InstallerUrl: https://www.uniconta.com/download/uniconta-setup-msi/?wpdmdl=17651&masterkey=59ae3221bb580
+  InstallerSha256: DDD6A0B6B8C9DD0519CE62FC422C50695B141E6E0854426950A33D8EB51B3832
+- Architecture: x64
+  Scope: user
   InstallerUrl: https://www.uniconta.com/download/uniconta-setup-msi/?wpdmdl=17651&masterkey=59ae3221bb580
   InstallerSha256: DDD6A0B6B8C9DD0519CE62FC422C50695B141E6E0854426950A33D8EB51B3832
 ManifestType: installer
