New version: Neumetrix.HttpWatch.Basic version 15.0.18

--- a/manifests/n/Neumetrix/HttpWatch/Basic/15.0.18/Neumetrix.HttpWatch.Basic.locale.en-US.yaml
+++ b/manifests/n/Neumetrix/HttpWatch/Basic/15.0.18/Neumetrix.HttpWatch.Basic.locale.en-US.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.10.0.schema.json
 
 PackageIdentifier: Neumetrix.HttpWatch.Basic
-PackageVersion: 15.0.17
+PackageVersion: 15.0.18
 PackageLocale: en-US
 Publisher: Neumetrix Limited
 PublisherUrl: https://www.httpwatch.com/
@@ -25,7 +25,9 @@ Tags:
 - performance
 - web
 - webpage
-ReleaseNotes: "- Fixed: A 'device does not exist' error could occur during installation"
+ReleaseNotes: |-
+  - Fixed: An 'unmatched character' error could occur when adding columns to the request grid
+  - Fixed: An 'invalid date time' error could occur when opening a HAR file written by the Safari browser
 ReleaseNotesUrl: https://www.httpwatch.com/download/versionhistory/
 PurchaseUrl: https://www.httpwatch.com/buy/
 Documentations:
