New version: Superace.UPDF version 2.0.4.0 (2.0.4.0)

--- a/manifests/s/Superace/UPDF/2.0.4.0/Superace.UPDF.locale.en-US.yaml
+++ b/manifests/s/Superace/UPDF/2.0.4.0/Superace.UPDF.locale.en-US.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.10.0.schema.json
 
 PackageIdentifier: Superace.UPDF
-PackageVersion: 2.0.3.0
+PackageVersion: 2.0.4.0
 PackageLocale: en-US
 Publisher: Superace Software Technology Co., Ltd.
 PublisherUrl: https://superace.com/
@@ -31,6 +31,10 @@ Tags:
 - read
 - reader
 - viewer
+ReleaseNotes: |-
+  - The UPDF AI chat function now supports displaying LaTeX formulas.
+  - The measurement scale calibration function has been added.
+  - We have also fixed some issues reported by users, which has improved the software's performance and stability.
 ReleaseNotesUrl: https://updf.com/whats-new/
 PurchaseUrl: https://updf.com/pricing-individuals/
 Documentations:
