--- a/manifests/s/Superace/UPDF/2.0.4.0/Superace.UPDF.locale.zh-CN.yaml
+++ b/manifests/s/Superace/UPDF/2.0.4.0/Superace.UPDF.locale.zh-CN.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.locale.1.10.0.schema.json
 
 PackageIdentifier: Superace.UPDF
-PackageVersion: 2.0.3.0
+PackageVersion: 2.0.4.0
 PackageLocale: zh-CN
 Publisher: Superace Software Technology Co., Ltd.
 PublisherUrl: https://superace.com/
@@ -30,6 +30,10 @@ Tags:
 - 转换
 - 阅读
 - 阅读器
+ReleaseNotes: |-
+  - UPDF AI 对话功能现已支持显示 LaTeX 公式。
+  - 新增测量比例尺校准功能。
+  - 我们还修复了部分用户反馈的问题，从而提升了软件的性能和稳定性。
 ReleaseNotesUrl: https://www.updf.cn/whats-new/
 PurchaseUrl: https://checkout.updf.cn/updf
 Documentations:
