--- a/manifests/q/QuadSpinner/Gaea/2.2.0.0/QuadSpinner.Gaea.locale.zh-CN.yaml
+++ b/manifests/q/QuadSpinner/Gaea/2.2.0.0/QuadSpinner.Gaea.locale.zh-CN.yaml
@@ -1,28 +1,27 @@
 # Created using wingetcreate 1.9.4.0
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.9.0.schema.json
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.locale.1.9.0.schema.json
 
 PackageIdentifier: QuadSpinner.Gaea
 PackageVersion: 2.2.0.0
-PackageLocale: en-US
+PackageLocale: zh-CN
 Publisher: QuadSpinner
 PublisherUrl: https://quadspinner.com/
 PublisherSupportUrl: https://quadspinner.com/Support
 PrivacyUrl: https://quadspinner.com/Legal/#Privacy
 PackageName: QuadSpinner Gaea 2.0
 PackageUrl: https://quadspinner.com/Download
-License: Proprietary
+License: 专有软件
 LicenseUrl: https://quadspinner.com/Legal/#EULA
 Copyright: Copyright © 2008-2025 QuadSpinner. All rights reserved.
 CopyrightUrl: https://quadspinner.com/Legal/#TOS
-ShortDescription: QuadSpinner Gaea is a procedural, graph-based, non-destructive terrain generator and simulator used in major AAA VFX, Games, and Virtual Production projects.
+ShortDescription: QuadSpinner Gaea 是一款程序化、基于图形的非破坏性地形生成器和模拟器，主要用于 3A 级视觉特效、游戏和虚拟制作项目。
 Tags:
-- terrain
-ReleaseNotes: This is a major update for Gaea. See https://gaea.app/blog-gaea-22 for details.
-PurchaseUrl: https://quadspinner.com/order
+- 地形
+PurchaseUrl: https://quadspinner.com/Order
 Documentations:
-- DocumentLabel: Documentation
+- DocumentLabel: 文档
   DocumentUrl: https://docs.gaea.app/
-- DocumentLabel: FAQ
-  DocumentUrl: https://quadspinner.com/support/FAQ
-ManifestType: defaultLocale
+- DocumentLabel: 常见问题
+  DocumentUrl: https://quadspinner.com/support/faq
+ManifestType: locale
 ManifestVersion: 1.9.0
