--- a/manifests/w/Wanpath/MyWorkDriveClient/7.1.1.22/Wanpath.MyWorkDriveClient.locale.en-US.yaml
+++ b/manifests/w/Wanpath/MyWorkDriveClient/7.1.1.22/Wanpath.MyWorkDriveClient.locale.en-US.yaml
@@ -6,15 +6,15 @@ PackageVersion: 7.1.1.22
 PackageLocale: en-US
 Publisher: Wanpath LLC
 PublisherUrl: https://www.myworkdrive.com/
-PublisherSupportUrl: https://www.myworkdrive.com/support/
-PrivacyUrl: https://www.myworkdrive.com/privacy-policy/
+PublisherSupportUrl: https://www.myworkdrive.com/kb
+PrivacyUrl: https://www.myworkdrive.com/privacy-policy
 Author: Wanpath LLC
 PackageName: MWD Client for Windows
-PackageUrl: https://www.myworkdrive.com/download/download-windows-client-production/
+PackageUrl: https://www.myworkdrive.com/download
 License: Proprietary
-LicenseUrl: https://www.myworkdrive.com/terms-of-service/
+LicenseUrl: https://www.myworkdrive.com/terms-of-service
 Copyright: Copyright © Wanpath LLC MyWorkDrive. All rights reserved.
-CopyrightUrl: https://www.myworkdrive.com/terms-of-service/
+CopyrightUrl: https://www.myworkdrive.com/terms-of-service
 ShortDescription: The Mapped Drive Desktop Client allows easy editing of files from a traditional mapped drive from within applications remotely from anywhere. Opening and editing design files, databases, programs and very large files is not supported.
 Tags:
 - cloud
@@ -26,7 +26,14 @@ Tags:
 - netdisk
 - sync
 - upload
-ReleaseNotesUrl: https://www.myworkdrive.com/support/windows-client-release-notes/
+ReleaseNotes: |-
+  - Updated application tracking for file lock management in office applications
+  - Updated logging related to application tracking when detailed log level enabled
+  - Fixed a bug which displayed Add to Zip in context menu of file paths outside MyWorkDrive shares
+  - Updated file writing method for AD/SMB Share types
+  - Fixed a bug opening office documents Online/web browser from DLP restricted shares
+  - Added scripted commands for timeout settings to command line install
+ReleaseNotesUrl: https://www.myworkdrive.com/kb/articles/windows-client-release-notes
 PurchaseUrl: https://www.myworkdrive.com/pricing-plans
 ManifestType: defaultLocale
 ManifestVersion: 1.10.0
