--- a/manifests/k/KuaiFan/DooTask/1.1.8/KuaiFan.DooTask.locale.zh-CN.yaml
+++ b/manifests/k/KuaiFan/DooTask/1.1.8/KuaiFan.DooTask.locale.zh-CN.yaml
@@ -34,11 +34,10 @@ Tags:
 - 笔记
 - 议程
 ReleaseNotes: |-
-  Changelog
   Bug Fixes
   - 修复机器人发送消息接口
   - 修复应用无法在窗口独立显示
-ReleaseNotesUrl: https://github.com/kuaifan/dootask/releases/tag/v1.1.8
+ReleaseNotesUrl: https://github.com/kuaifan/dootask/blob/HEAD/CHANGELOG.md#118
 PurchaseUrl: https://www.dootask.com/site/zh/price.html
 ManifestType: defaultLocale
 ManifestVersion: 1.10.0
