Modify: TRUSTSING.iDefender version 5.0.2.0

--- a/manifests/t/TRUSTSING/iDefender/5.0.2.0/TRUSTSING.iDefender.yaml
+++ b/manifests/t/TRUSTSING/iDefender/5.0.2.0/TRUSTSING.iDefender.yaml
@@ -3,6 +3,6 @@
 
 PackageIdentifier: TRUSTSING.iDefender
 PackageVersion: 5.0.2.0
-DefaultLocale: en-US
+DefaultLocale: zh-CN
 ManifestType: version
 ManifestVersion: 1.10.0
