--- a/manifests/t/TRUSTSING/iDefender/5.0.2.0/TRUSTSING.iDefender.locale.en-US.yaml
+++ b/manifests/t/TRUSTSING/iDefender/5.0.2.0/TRUSTSING.iDefender.locale.en-US.yaml
@@ -1,15 +1,11 @@
 # Created with YamlCreate.ps1 Dumplings Mod
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.10.0.schema.json
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.locale.1.10.0.schema.json
 
 PackageIdentifier: TRUSTSING.iDefender
 PackageVersion: 5.0.2.0
 PackageLocale: en-US
-Publisher: iMonitorSDK
-PublisherUrl: https://trustsing.com/
 Author: Shenzhen Chuangxin Changrong Network Co., Ltd.
-PackageName: iDefender
 License: Proprietary
-Copyright: Copyright ©️ Shenzhen Chuangxin Changrong Network Co., Ltd.
 ShortDescription: Endpoint Detection Defense and Response for Home
 Description: |-
   iDefender is 5D (Process Defense, File Defense, Network Defense, Registry Defense, Enhance Defense) Endpoint Active Defense System based on scene mode, it provides you with the ability to fully control your computer. Using iDefender can help you prevent ransomware, defend advanced threads, intercepting exploits, hardening system, and protecting privacy.
@@ -19,6 +15,5 @@ Description: |-
 Tags:
 - hips
 - security
-ReleaseNotesUrl: https://trustsing.com/idefender/#_5-0-2-0
-ManifestType: defaultLocale
+ManifestType: locale
 ManifestVersion: 1.10.0
