--- a/manifests/t/TRUSTSING/iDefender/5.0.2.0/TRUSTSING.iDefender.locale.zh-CN.yaml
+++ b/manifests/t/TRUSTSING/iDefender/5.0.2.0/TRUSTSING.iDefender.locale.zh-CN.yaml
@@ -1,5 +1,5 @@
 # Created with YamlCreate.ps1 Dumplings Mod
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.locale.1.10.0.schema.json
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.10.0.schema.json
 
 PackageIdentifier: TRUSTSING.iDefender
 PackageVersion: 5.0.2.0
@@ -21,5 +21,5 @@ ReleaseNotes: |-
   - 修复内置规则拦截 PIN 登录的问题
   - 添加最新银狐的白加黑检测支持
 ReleaseNotesUrl: https://trustsing.com/idefender/#_5-0-2-0
-ManifestType: locale
+ManifestType: defaultLocale
 ManifestVersion: 1.10.0
