--- a/manifests/g/Greenshot/Greenshot/1.3.292/Greenshot.Greenshot.installer.yaml
+++ b/manifests/g/Greenshot/Greenshot/1.3.292/Greenshot.Greenshot.installer.yaml
@@ -4,7 +4,6 @@
 PackageIdentifier: Greenshot.Greenshot
 PackageVersion: 1.3.292
 InstallerType: inno
-Scope: user
 UpgradeBehavior: install
 FileExtensions:
 - greenshot
@@ -12,7 +11,14 @@ ProductCode: Greenshot_is1
 ReleaseDate: 2025-07-16
 Installers:
 - Architecture: x86
+  Scope: user
   InstallerUrl: https://github.com/greenshot/greenshot/releases/download/v1.3.292/Greenshot-INSTALLER-1.3.292-RELEASE.exe
   InstallerSha256: 724314461C32D199D6AD43A04694602918E9192C78317CDE5AF0CC22EE44217C
+- Architecture: x86
+  Scope: machine
+  InstallerUrl: https://github.com/greenshot/greenshot/releases/download/v1.3.292/Greenshot-INSTALLER-1.3.292-RELEASE.exe
+  InstallerSha256: 724314461C32D199D6AD43A04694602918E9192C78317CDE5AF0CC22EE44217C
+  InstallerSwitches:
+    Custom: /ALLUSERS
 ManifestType: installer
 ManifestVersion: 1.10.0
