--- a/manifests/b/Belarc/Advisor/13.1.0.0/Belarc.Advisor.installer.yaml
+++ b/manifests/b/Belarc/Advisor/13.1.0.0/Belarc.Advisor.installer.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.10.0.schema.json
 
 PackageIdentifier: Belarc.Advisor
-PackageVersion: 13.0.0.0
+PackageVersion: 13.1.0.0
 InstallerType: exe
 InstallModes:
 - interactive
@@ -16,7 +16,7 @@ FileExtensions:
 ProductCode: Belarc Advisor
 Installers:
 - Architecture: x86
-  InstallerUrl: https://downloads.belarc.com/advisor/advisorinstaller.exe?t=20250410
-  InstallerSha256: 32977F94B9BB569BFA2FD11D8E0303BCC8010AEB4E3B08AFC4BAFE0EC235CF14
+  InstallerUrl: https://downloads.belarc.com/advisor/advisorinstaller.exe
+  InstallerSha256: 3C22DD09127E6DF6E08F9AD701FA5D651B799CA91A3CB57F2ABB2F7382B11076
 ManifestType: installer
 ManifestVersion: 1.10.0
