Modify: KuaiFan.DooTask version 1.1.8 (#275163)

--- a/manifests/k/KuaiFan/DooTask/1.1.8/KuaiFan.DooTask.locale.zh-CN.yaml
+++ b/manifests/k/KuaiFan/DooTask/1.1.8/KuaiFan.DooTask.locale.zh-CN.yaml
@@ -13,7 +13,7 @@ PackageName: DooTask
 PackageUrl: https://www.dootask.com/
 License: AGPL-3.0
 LicenseUrl: https://github.com/kuaifan/dootask/blob/HEAD/LICENSE
-Copyright: Copyright © 2024 KuaiFan
+Copyright: Copyright © 2025 KuaiFan
 ShortDescription: 轻量级任务管理工具
 Description: DooTask 是一款轻量级的开源在线项目任务管理工具，提供各类文档协作工具、在线思维导图、在线流程图、项目管理、任务分发、即时 IM，文件管理等工具。助力团队高效推进项目，让工作更简单。
 Tags:
@@ -34,11 +34,10 @@ Tags:
 - 笔记
 - 议程
 ReleaseNotes: |-
-  Changelog
   Bug Fixes
   - 修复机器人发送消息接口
   - 修复应用无法在窗口独立显示
-ReleaseNotesUrl: https://github.com/kuaifan/dootask/releases/tag/v1.1.8
+ReleaseNotesUrl: https://github.com/kuaifan/dootask/blob/HEAD/CHANGELOG.md#118
 PurchaseUrl: https://www.dootask.com/site/zh/price.html
 ManifestType: defaultLocale
 ManifestVersion: 1.10.0
