Update version: yt-dlp.yt-dlp.nightly version 2025.07.16.233138

--- a/manifests/y/yt-dlp/yt-dlp/nightly/2025.07.16.233138/yt-dlp.yt-dlp.nightly.installer.yaml
+++ b/manifests/y/yt-dlp/yt-dlp/nightly/2025.07.16.233138/yt-dlp.yt-dlp.nightly.installer.yaml
@@ -16,6 +16,6 @@ Installers:
   InstallerSha256: 68F70BE42A562F11F873DA40A697B173310CFDDF057EDC8CB27CF1551274E038
   Dependencies:
     PackageDependencies:
-    - PackageIdentifier: Gyan.FFmpeg
+    - PackageIdentifier: yt-dlp.FFmpeg
 ManifestType: installer
 ManifestVersion: 1.10.0
