New version: SoftwareOK.DesktopOK version 11.92

--- a/manifests/s/SoftwareOK/DesktopOK/11.92/SoftwareOK.DesktopOK.locale.en-US.yaml
+++ b/manifests/s/SoftwareOK/DesktopOK/11.92/SoftwareOK.DesktopOK.locale.en-US.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.10.0.schema.json
 
 PackageIdentifier: SoftwareOK.DesktopOK
-PackageVersion: "11.91"
+PackageVersion: "11.92"
 PackageLocale: en-US
 Publisher: SoftwareOK
 PublisherUrl: https://www.softwareok.com/
@@ -19,8 +19,8 @@ Description: DesktopOK is a small but effective solution for user that have to c
 Tags:
 - desktop
 ReleaseNotes: |-
-  - Minor adjustments to the DOK tools and general optimizations
-  - Improvements and updates to the language files
+  - Various fixes and adjustments, as well as further testing under Windows 11
+  - Language file updates
 ReleaseNotesUrl: https://www.softwareok.com/?seite=Freeware/DesktopOK/History
 Documentations:
 - DocumentLabel: Manual
