--- a/manifests/e/Elgato/Studio/1.0.0.671/Elgato.Studio.installer.yaml
+++ b/manifests/e/Elgato/Studio/1.0.0.671/Elgato.Studio.installer.yaml
@@ -12,6 +12,7 @@ PackageFamilyName: Elgato.Studio_g54w8ztgkx496
 Dependencies:
   PackageDependencies:
   - PackageIdentifier: Microsoft.WindowsAppRuntime.1.7
+  - PackageIdentifier: Microsoft.VCLibs.Desktop.14
 Installers:
 - Architecture: x64
   InstallerUrl: https://edge.elgato.com/egc/windows/estw/1.0.0/Elgato.Studio_1.0.0.671_x64.msix
@@ -19,7 +20,5 @@ Installers:
   SignatureSha256: 0166C60BD8574A17098472BE769CF0737D301E086960BA5570A3C05B0F6934A4
   UnsupportedOSArchitectures:
   - arm64
-  - arm
-  - x86
 ManifestType: installer
 ManifestVersion: 1.10.0
