Update version: tibbo.ioninja version 5.8.2

--- a/manifests/t/tibbo/ioninja/5.8.2/tibbo.ioninja.installer.yaml
+++ b/manifests/t/tibbo/ioninja/5.8.2/tibbo.ioninja.installer.yaml
@@ -1,5 +1,5 @@
-# Created using wingetcreate 1.9.14.0
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.9.0.schema.json
+# Created using wingetcreate 1.10.2.0
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.10.0.schema.json
 
 PackageIdentifier: tibbo.ioninja
 PackageVersion: 5.8.2
@@ -16,13 +16,13 @@ InstallModes:
 UpgradeBehavior: install
 Installers:
 - Architecture: x64
-  InstallerUrl: https://ioninja.com/downloads/archive/ioninja/ioninja-5.8.2/ioninja-5.8.2-windows-amd64-core.msi
-  InstallerSha256: 191513AE3F21E892B38F6BA65658D0E502FBBEFD44996307A67CA6292E25251B
-  ProductCode: '{6924C244-8FCC-45AA-82F6-76EA232D1AA5}'
+  InstallerUrl: http://tibbo.com/downloads/archive/ioninja/ioninja-5.8.2/ioninja-5.8.2-windows-amd64.msi
+  InstallerSha256: E587242943F30542BBFB00F391EC6262E41070734A7BC5EA2E39CC178D56D10D
+  ProductCode: '{A0767FB4-C19C-4871-B5E2-100EA824A27A}'
 - Architecture: x86
-  InstallerUrl: https://ioninja.com/downloads/archive/ioninja/ioninja-5.8.2/ioninja-5.8.2-windows-x86-core.msi
-  InstallerSha256: 9ABE082204ADA7604911AAA5B4ADD625DA83A76D6F91A15C6C85300D2F46CF5B
-  ProductCode: '{97D99A5F-FE20-4B66-863A-3836EB1377BA}'
+  InstallerUrl: http://tibbo.com/downloads/archive/ioninja/ioninja-5.8.2/ioninja-5.8.2-windows-x86.msi
+  InstallerSha256: E2E334B3596BA4573260F5477C9EE79C1D07C803FA86F30A71FDA8331F0E3358
+  ProductCode: '{4174F178-3D6E-4D22-88AE-24D9B0A29E5C}'
 ManifestType: installer
-ManifestVersion: 1.9.0
+ManifestVersion: 1.10.0
 ReleaseDate: 2025-07-18
