--- a/manifests/f/FCEUX/FCEUX/2.6.6/FCEUX.FCEUX.locale.en-US.yaml
+++ b/manifests/f/FCEUX/FCEUX/2.6.6/FCEUX.FCEUX.locale.en-US.yaml
@@ -5,7 +5,7 @@ PackageIdentifier: FCEUX.FCEUX
 PackageVersion: 2.6.6
 PackageLocale: en-US
 Publisher: FCEUX
-PublisherUrl: http://fceux.com/
+PublisherUrl: https://fceux.com/
 PublisherSupportUrl: https://fceux.com/web/documentation.html
 Author: FCEUX
 PackageName: FCEUX
