--- a/manifests/b/BellSoft/LibericaJDK/8/8.0.462.11/BellSoft.LibericaJDK.8.locale.en-US.yaml
+++ b/manifests/b/BellSoft/LibericaJDK/8/8.0.462.11/BellSoft.LibericaJDK.8.locale.en-US.yaml
@@ -25,6 +25,6 @@ Tags:
 - openjdk
 # Agreements:
 # ReleaseNotes:
-ReleaseNotesUrl: https://docs.bell-sw.com/liberica-jdk/8u462b11/general/release-notes/
+# ReleaseNotesUrl: 
 ManifestType: defaultLocale
 ManifestVersion: 1.6.0
