--- a/manifests/b/BellSoft/LibericaJDK/21/21.0.8.12/BellSoft.LibericaJDK.21.locale.en-US.yaml
+++ b/manifests/b/BellSoft/LibericaJDK/21/21.0.8.12/BellSoft.LibericaJDK.21.locale.en-US.yaml
@@ -25,6 +25,6 @@ Tags:
 - openjdk
 # Agreements:
 # ReleaseNotes:
-ReleaseNotesUrl: https://docs.bell-sw.com/liberica-jdk/21.0.8b12/general/release-notes/
+# ReleaseNotesUrl:
 ManifestType: defaultLocale
 ManifestVersion: 1.6.0
