--- a/manifests/b/BellSoft/LibericaJDK/24/24.0.2.12/BellSoft.LibericaJDK.24.locale.en-US.yaml
+++ b/manifests/b/BellSoft/LibericaJDK/24/24.0.2.12/BellSoft.LibericaJDK.24.locale.en-US.yaml
@@ -25,6 +25,6 @@ Tags:
 - openjdk
 # Agreements:
 # ReleaseNotes:
-ReleaseNotesUrl: https://docs.bell-sw.com/liberica-jdk/24.0.2b12/general/release-notes/
+# ReleaseNotesUrl:
 ManifestType: defaultLocale
 ManifestVersion: 1.6.0
