--- a/manifests/b/BellSoft/LibericaJDK/17/17.0.16.12/BellSoft.LibericaJDK.17.locale.en-US.yaml
+++ b/manifests/b/BellSoft/LibericaJDK/17/17.0.16.12/BellSoft.LibericaJDK.17.locale.en-US.yaml
@@ -25,6 +25,6 @@ Tags:
 - openjdk
 # Agreements:
 # ReleaseNotes:
-ReleaseNotesUrl: https://docs.bell-sw.com/liberica-jdk/17.0.16b12/general/release-notes/
+# ReleaseNotesUrl:
 ManifestType: defaultLocale
 ManifestVersion: 1.6.0
