--- a/manifests/c/Cjwdev/NTFSPermissionsReporter/Free/1.5.0/Cjwdev.NTFSPermissionsReporter.Free.locale.en-US.yaml
+++ b/manifests/c/Cjwdev/NTFSPermissionsReporter/Free/1.5.0/Cjwdev.NTFSPermissionsReporter.Free.locale.en-US.yaml
@@ -37,7 +37,7 @@ ReleaseNotes: |-
   The account or group that has been set as the Owner of each directory is now shown
   Fixed a bug that caused the Relative Path column not to be exported correctly when exporting to HTML file
   The table in HTML exports is now sortable
-# ReleaseNotesUrl:
+ReleaseNotesUrl: https://cjwdev.com/Software/NtfsReports/VersionHistory.txt
 # PurchaseUrl:
 # InstallationNotes:
 # Documentations:
