Comment out inaccessible URLs

--- a/manifests/p/PTC/CreoView/Express/19.0.0.0/PTC.CreoView.Express.locale.en-US.yaml
+++ b/manifests/p/PTC/CreoView/Express/19.0.0.0/PTC.CreoView.Express.locale.en-US.yaml
@@ -5,16 +5,16 @@ PackageIdentifier: PTC.CreoView.Express
 PackageVersion: 19.0.0.0
 PackageLocale: en-US
 Publisher: PTC
-PublisherUrl: https://www.ptc.com/
-PublisherSupportUrl: https://www.ptc.com/support
-PrivacyUrl: https://www.ptc.com/en/documents/policies/privacy
+# PublisherUrl: https://www.ptc.com/
+# PublisherSupportUrl: https://www.ptc.com/support
+# PrivacyUrl: https://www.ptc.com/en/documents/policies/privacy
 Author: PTC Inc.
 PackageName: PTC Creo View Express
-PackageUrl: https://www.ptc.com/products/creo/creo-view/extension-express-download
+# PackageUrl: https://www.ptc.com/products/creo/creo-view/extension-express-download
 License: Freeware
-LicenseUrl: https://www.ptc.com/en/documents/legal-agreements
+# LicenseUrl: https://www.ptc.com/en/documents/legal-agreements
 Copyright: Copyright © 2025 PTC Inc. and/or Its Subsidiary Companies. All Rights Reserved
-CopyrightUrl: https://www.ptc.com/en/documents/legal-agreements
+# CopyrightUrl: https://www.ptc.com/en/documents/legal-agreements
 ShortDescription: Creo View Express provides comprehensive capabilities for viewing and interrogating 3D CAD models.
 # Description:
 # Moniker:
