--- a/manifests/w/WHONET/WHONET/25.7.18/WHONET.WHONET.locale.en-US.yaml
+++ b/manifests/w/WHONET/WHONET/25.7.18/WHONET.WHONET.locale.en-US.yaml
@@ -31,5 +31,7 @@ Tags:
 - Microbiology
 - Resistance
 - WHO
+ReleaseNotes: Adds hyphens between values automatically for composite fields in BacLink.
+ReleaseNotesUrl: https://whonet.org/WHONET-ReleaseNotes.html
 ManifestType: defaultLocale
 ManifestVersion: 1.9.0
