--- a/manifests/b/BrinkSoftware/IbisVoorInfra/3.0.2507.11401/BrinkSoftware.IbisVoorInfra.installer.yaml
+++ b/manifests/b/BrinkSoftware/IbisVoorInfra/3.0.2507.11401/BrinkSoftware.IbisVoorInfra.installer.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.10.0.schema.json
 
 PackageIdentifier: BrinkSoftware.IbisVoorInfra
-PackageVersion: 3.0.2505.11301
+PackageVersion: 3.0.2507.11401
 InstallerType: exe
 Scope: machine
 InstallModes:
@@ -63,13 +63,13 @@ UpgradeBehavior: install
 FileExtensions:
 - gcr
 - gww
-ProductCode: '{12342CDD-D9F4-470D-9ED4-B10CF7FFC1D6}'
+ProductCode: '{5C024892-196C-4561-8C07-6F3CF716F3DF}'
 AppsAndFeaturesEntries:
 - UpgradeCode: '{02076861-ED5B-49C1-953D-9491BE437C70}'
   InstallerType: msi
 Installers:
 - Architecture: x64
-  InstallerUrl: https://2804826.fs1.hubspotusercontent-na1.net/hubfs/2804826/Downloads%20ibis.nl%20en%20ibis.be/Infra/IbisVoorInfra_Setup_x64.exe
-  InstallerSha256: 9EDC2B27DB93480655158F6B40EAAA5298242EF34CEA03DE83FAD7A1433CDD17
+  InstallerUrl: https://www.ibis.nl/hubfs/Downloads%20ibis.nl%20en%20ibis.be/Infra/IbisVoorInfra_Setup_x64.exe?hsLang=nl
+  InstallerSha256: 1D83F245BBA9CA914C6B4D6C81C5688A051F388D2EBB6CA18064FA444515C9E9
 ManifestType: installer
 ManifestVersion: 1.10.0
