--- a/manifests/x/Xiaocai/MiniCADDraw/2025R2/Xiaocai.MiniCADDraw.locale.zh-CN.yaml
+++ b/manifests/x/Xiaocai/MiniCADDraw/2025R2/Xiaocai.MiniCADDraw.locale.zh-CN.yaml
@@ -1,8 +1,8 @@
 # Created with YamlCreate.ps1 Dumplings Mod
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.locale.1.9.0.schema.json
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.locale.1.10.0.schema.json
 
 PackageIdentifier: Xiaocai.MiniCADDraw
-PackageVersion: 2025R1.1
+PackageVersion: 2025R2
 PackageLocale: zh-CN
 Publisher: 上海晓材科技有限公司
 PublisherUrl: https://www.olcad.com/
@@ -21,9 +21,7 @@ Tags:
 - 天正
 - 画图
 - 蓝图
-ReleaseNotes: |-
-  1. 打印样式新增导入和编辑功能
-  2. 修复偶发 BUG
+ReleaseNotes: 1. 修复了一些已知问题
 ReleaseNotesUrl: https://www.olcad.com/updateLog.html
 ManifestType: locale
-ManifestVersion: 1.9.0
+ManifestVersion: 1.10.0
