--- a/manifests/g/Google/AndroidStudio/Beta/2025.1.1.11/Google.AndroidStudio.Beta.locale.en-US.yaml
+++ b/manifests/g/Google/AndroidStudio/Beta/2025.1.1.11/Google.AndroidStudio.Beta.locale.en-US.yaml
@@ -37,6 +37,7 @@ Tags:
 - ide
 - intellij
 - studio
+ReleaseNotesUrl: https://androidstudio.googleblog.com/
 Documentations:
 - DocumentLabel: Install Alongside Stable
   DocumentUrl: https://developer.android.com/studio/preview/install-preview
