--- a/manifests/g/GaetanSencie/SimpleAnnualAccounting/2.1.0.0/GaetanSencie.SimpleAnnualAccounting.installer.yaml
+++ b/manifests/g/GaetanSencie/SimpleAnnualAccounting/2.1.0.0/GaetanSencie.SimpleAnnualAccounting.installer.yaml
@@ -12,3 +12,6 @@ Installers:
 ManifestType: installer
 ManifestVersion: 1.10.0
 ReleaseDate: 2025-07-17
+Agreements: 
+- AgreementLabel: Accord de licence
+  AgreementUrl: https://github.com/STENS66/Comptabilite_annuelle/releases/download/V2.1.0.0/License.txt
