--- a/manifests/w/WiseCleaner/WiseX/1.0.2/WiseCleaner.WiseX.installer.yaml
+++ b/manifests/w/WiseCleaner/WiseX/1.0.2/WiseCleaner.WiseX.installer.yaml
@@ -19,6 +19,9 @@ AppsAndFeaturesEntries:
 ElevationRequirement: elevatesSelf
 InstallationMetadata:
   DefaultInstallLocation: '%ProgramFiles%\Wise\WiseX'
+Dependencies:
+  PackageDependencies:
+  - PackageIdentifier: Microsoft.VCRedist.2015+.x64
 Installers:
 - Architecture: x86
   InstallerUrl: https://downloads.wisecleaner.com/soft/WiseX_1.0.2.103.exe
