Update package to elevatesSelf

--- a/manifests/m/Microsoft/GameInput/2.0.26100.5334/Microsoft.GameInput.installer.yaml
+++ b/manifests/m/Microsoft/GameInput/2.0.26100.5334/Microsoft.GameInput.installer.yaml
@@ -6,7 +6,7 @@ PackageVersion: 2.0.26100.5334
 InstallerLocale: en-US
 InstallerType: wix
 ProductCode: '{06B998D5-1FB7-D83A-2106-8FE02F60DC3E}'
-ElevationRequirement: elevationRequired
+ElevationRequirement: elevatesSelf
 Installers:
 - Architecture: x64
   InstallerUrl: https://github.com/microsoftconnect/GameInput/releases/download/v2.0.26100.5334/GameInputRedist.msi
